[package]
name = "blackjack"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rand for random numbers that will be used to shuffle the deck
rand = "0.8.4"
# Using fltk for GUI
fltk = "^1.2"
# num used for rational numbers to represent money
num = "0.4.0"
clap = "2.33.3"